// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleTextQuestionSchema choices choices should not be duplicated 1`] = `
"1 validation issue(s)

  Issue #0: custom_error at choices
  There should not be duplicate elements in the choices list.
"
`;

exports[`MultipleTextQuestionSchema choices choices should not be duplicated 2`] = `
"1 validation issue(s)

  Issue #0: custom_error at choices
  There should not be duplicate elements in the choices list.
"
`;

exports[`MultipleTextQuestionSchema choices choices string cannot be empty 1`] = `
"1 validation issue(s)

  Issue #0: too_small at choices.0
  Should be at least 1 characters
"
`;

exports[`MultipleTextQuestionSchema choices choices string cannot be empty 2`] = `
"1 validation issue(s)

  Issue #0: too_small at choices.0
  Should be at least 1 characters
"
`;

exports[`MultipleTextQuestionSchema choices should not be anything besides array and string: number 1`] = `
"1 validation issue(s)

  Issue #0: invalid_union at choices
  Invalid input
"
`;

exports[`MultipleTextQuestionSchema choices should not be anything besides array and string: object 1`] = `
"1 validation issue(s)

  Issue #0: invalid_union at choices
  Invalid input
"
`;

exports[`MultipleTextQuestionSchema choices should not be empty array 1`] = `
"1 validation issue(s)

  Issue #0: nonempty_array_is_empty at choices
  List must contain at least one item
"
`;

exports[`MultipleTextQuestionSchema choices should not be null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_union at choices
  Invalid input
"
`;

exports[`MultipleTextQuestionSchema forceChoice should not be anything other than boolean: number 1`] = `
"1 validation issue(s)

  Issue #0: invalid_union at forceChoice
  Invalid input
"
`;

exports[`MultipleTextQuestionSchema forceChoice should not be anything other than boolean: string true 1`] = `
"1 validation issue(s)

  Issue #0: invalid_union at forceChoice
  Invalid input
"
`;

exports[`MultipleTextQuestionSchema forceChoice should not be null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_union at forceChoice
  Invalid input
"
`;

exports[`MultipleTextQuestionSchema forceChoice should not be set if choices is not set: false 1`] = `
"1 validation issue(s)

  Issue #0: custom_error at forceChoice
  \`forceChoice\` can only be set if \`choices\` is set.
"
`;

exports[`MultipleTextQuestionSchema forceChoice should not be set if choices is not set: true 1`] = `
"1 validation issue(s)

  Issue #0: custom_error at forceChoice
  \`forceChoice\` can only be set if \`choices\` is set.
"
`;

exports[`MultipleTextQuestionSchema indexName should be question ID-compatible string: space 1`] = `
"1 validation issue(s)

  Issue #0: invalid_string at indexName
  index name can only include letters, numbers, and \\"_\\".
"
`;

exports[`MultipleTextQuestionSchema indexName should be question ID-compatible string: special characters 1`] = `
"1 validation issue(s)

  Issue #0: invalid_string at indexName
  index name can only include letters, numbers, and \\"_\\".
"
`;

exports[`MultipleTextQuestionSchema indexName should not be empty 1`] = `
"2 validation issue(s)

  Issue #0: too_small at indexName
  Should be at least 1 characters

  Issue #1: invalid_string at indexName
  index name can only include letters, numbers, and \\"_\\".
"
`;

exports[`MultipleTextQuestionSchema indexName should not be null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at indexName
  Expected string, received null
"
`;

exports[`MultipleTextQuestionSchema indexName should not be undefined 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at indexName
  Required
"
`;

exports[`MultipleTextQuestionSchema max should not be decimal 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at max
  Expected integer, received number
"
`;

exports[`MultipleTextQuestionSchema max should not be null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at max
  Expected number, received null
"
`;

exports[`MultipleTextQuestionSchema max should not be undefined 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at max
  Required
"
`;

exports[`MultipleTextQuestionSchema max should not be zero or negative: negative decimal 1`] = `
"2 validation issue(s)

  Issue #0: invalid_type at max
  Expected integer, received number

  Issue #1: too_small at max
  Value should be greater than 0
"
`;

exports[`MultipleTextQuestionSchema max should not be zero or negative: negative integer 1`] = `
"1 validation issue(s)

  Issue #0: too_small at max
  Value should be greater than 0
"
`;

exports[`MultipleTextQuestionSchema max should not be zero or negative: zero 1`] = `
"1 validation issue(s)

  Issue #0: too_small at max
  Value should be greater than 0
"
`;

exports[`MultipleTextQuestionSchema maxMinus should be question ID 1`] = `
"1 validation issue(s)

  Issue #0: invalid_string at maxMinus
  Question ID can only include letters, numbers, \\"_\\", \\"[\\", and \\"]\\".
"
`;

exports[`MultipleTextQuestionSchema maxMinus should not be null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_union at maxMinus
  Invalid input
"
`;

exports[`MultipleTextQuestionSchema placeholder should not be null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_union at placeholder
  Invalid input
"
`;

exports[`MultipleTextQuestionSchema repeatedItemStartId should be question ID 1`] = `
"1 validation issue(s)

  Issue #0: invalid_string at repeatedItemStartId
  Question ID can only include letters, numbers, \\"_\\", \\"[\\", and \\"]\\".
"
`;

exports[`MultipleTextQuestionSchema repeatedItemStartId should not be null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_union at repeatedItemStartId
  Invalid input
"
`;

exports[`MultipleTextQuestionSchema type 1`] = `
"1 validation issue(s)

  Issue #0: invalid_literal_value at type
  Input must be \\"MultipleText\\"
"
`;

exports[`MultipleTextQuestionSchema variableName should be question ID-compatible string: space 1`] = `
"1 validation issue(s)

  Issue #0: invalid_string at variableName
  variable name can only include letters, numbers, and \\"_\\".
"
`;

exports[`MultipleTextQuestionSchema variableName should be question ID-compatible string: special characters 1`] = `
"1 validation issue(s)

  Issue #0: invalid_string at variableName
  variable name can only include letters, numbers, and \\"_\\".
"
`;

exports[`MultipleTextQuestionSchema variableName should not be empty 1`] = `
"2 validation issue(s)

  Issue #0: too_small at variableName
  Should be at least 1 characters

  Issue #1: invalid_string at variableName
  variable name can only include letters, numbers, and \\"_\\".
"
`;

exports[`MultipleTextQuestionSchema variableName should not be null 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at variableName
  Expected string, received null
"
`;

exports[`MultipleTextQuestionSchema variableName should not be undefined 1`] = `
"1 validation issue(s)

  Issue #0: invalid_type at variableName
  Required
"
`;
